--- a/index.html
+++ b/index.html
@@ -1,76 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <title>Sign Up & Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: #f4f4f4;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
-      background-color: #f2f2f2;
     }
-    .login-box {
-      background-color: white;
+    .container {
+      background: white;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
       width: 300px;
     }
-    input[type="text"], input[type="password"] {
+    h2 { text-align: center; }
+    input {
       width: 100%;
-      padding: 8px;
-      margin: 8px 0;
-      border-radius: 4px;
-      border: 1px solid #ccc;
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
     }
     button {
       width: 100%;
       padding: 10px;
-      background-color: #4CAF50;
+      margin-top: 10px;
+      background: #4CAF50;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #45a049;
-    }
-    .error {
-      color: red;
+    button:hover { background: #45a049; }
+    .switch {
+      text-align: center;
       margin-top: 10px;
+      color: blue;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="login-box">
-    <h2>Login</h2>
-    <input type="text" id="username" placeholder="Username">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <div id="error" class="error"></div>
-  </div>
 
-  <script>
-    // Hardcoded username and password
-    const correctUsername = "user123";
-    const correctPassword = "pass123";
+<div class="container" id="signup">
+  <h2>Sign Up</h2>
+  <input type="text" id="newUser" placeholder="Username">
+  <input type="password" id="newPass" placeholder="Password">
+  <button onclick="signup()">Sign Up</button>
+  <div class="switch" onclick="showLogin()">Already have an account? Login</div>
+</div>
 
-    function login() {
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-      const errorDiv = document.getElementById("error");
+<div class="container" id="login" style="display:none;">
+  <h2>Login</h2>
+  <input type="text" id="user" placeholder="Username">
+  <input type="password" id="pass" placeholder="Password">
+  <button onclick="login()">Login</button>
+  <div class="switch" onclick="showSignup()">Don’t have an account? Sign Up</div>
+</div>
 
-      if(username === correctUsername && password === correctPassword) {
-        alert("Login successful!");
-        errorDiv.textContent = "";
-        // You can redirect to another page here
-        // window.location.href = "dashboard.html";
-      } else {
-        errorDiv.textContent = "Invalid username or password";
-      }
-    }
-  </script>
+<script>
+function signup() {
+  let username = document.getElementById("newUser").value;
+  let password = document.getElementById("newPass").value;
+
+  if (username && password) {
+    // Save user info in localStorage
+    localStorage.setItem("username", username);
+    localStorage.setItem("password", password);
+    alert("Account created! Please log in.");
+    showLogin();
+  } else {
+    alert("Please fill out all fields.");
+  }
+}
+
+function login() {
+  let username = document.getElementById("user").value;
+  let password = document.getElementById("pass").value;
+
+  let storedUser = localStorage.getItem("username");
+  let storedPass = localStorage.getItem("password");
+
+  if (username === storedUser && password === storedPass) {
+    alert("Login successful! 🎉");
+  } else {
+    alert("Incorrect username or password.");
+  }
+}
+
+function showLogin() {
+  document.getElementById("signup").style.display = "none";
+  document.getElementById("login").style.display = "block";
+}
+
+function showSignup() {
+  document.getElementById("login").style.display = "none";
+  document.getElementById("signup").style.display = "block";
+}
+</script>
+
 </body>
 </html>
