--- a/index.html
+++ b/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sign Up & Login</title>
+  <title>StartPilot - Sign Up & Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      margin: 0;
+      padding: 0;
     }
+
+    /* Header */
+    header {
+      background: #4CAF50;
+      color: white;
+      padding: 15px 30px;
+      font-size: 22px;
+      font-weight: bold;
+    }
+
+    /* Layout */
+    .wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: calc(100vh - 60px); /* full height minus header */
+    }
+
+    /* White box */
     .container {
       background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      width: 300px;
+      padding: 30px 40px 30px 30px; /* more padding on right side */
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.15);
+      width: 320px;
     }
-    h2 { text-align: center; }
+
+    h2 { text-align: center; margin-bottom: 15px; }
+
     input {
       width: 100%;
       padding: 10px;
-      margin: 5px 0;
+      margin: 8px 0;
       border: 1px solid #ddd;
-      border-radius: 5px;
+      border-radius: 6px;
     }
+
     button {
       width: 100%;
       padding: 10px;
@@ -34,34 +53,45 @@
       background: #4CAF50;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 6px;
       cursor: pointer;
+      font-size: 16px;
     }
+
     button:hover { background: #45a049; }
+
     .switch {
       text-align: center;
-      margin-top: 10px;
-      color: blue;
+      margin-top: 12px;
+      color: #007bff;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-<div class="container" id="signup">
-  <h2>Sign Up</h2>
-  <input type="text" id="newUser" placeholder="Username">
-  <input type="password" id="newPass" placeholder="Password">
-  <button onclick="signup()">Sign Up</button>
-  <div class="switch" onclick="showLogin()">Already have an account? Login</div>
-</div>
+<!-- Website header -->
+<header>StartPilot</header>
 
-<div class="container" id="login" style="display:none;">
-  <h2>Login</h2>
-  <input type="text" id="user" placeholder="Username">
-  <input type="password" id="pass" placeholder="Password">
-  <button onclick="login()">Login</button>
-  <div class="switch" onclick="showSignup()">Don’t have an account? Sign Up</div>
+<!-- Wrapper to center the content -->
+<div class="wrapper">
+  <!-- Sign Up -->
+  <div class="container" id="signup">
+    <h2>Sign Up</h2>
+    <input type="text" id="newUser" placeholder="Username">
+    <input type="password" id="newPass" placeholder="Password">
+    <button onclick="signup()">Sign Up</button>
+    <div class="switch" onclick="showLogin()">Already have an account? Login</div>
+  </div>
+
+  <!-- Login -->
+  <div class="container" id="login" style="display:none;">
+    <h2>Login</h2>
+    <input type="text" id="user" placeholder="Username">
+    <input type="password" id="pass" placeholder="Password">
+    <button onclick="login()">Login</button>
+    <div class="switch" onclick="showSignup()">Don’t have an account? Sign Up</div>
+  </div>
 </div>
 
 <script>
@@ -70,7 +100,6 @@ function signup() {
   let password = document.getElementById("newPass").value;
 
   if (username && password) {
-    // Save user info in localStorage
     localStorage.setItem("username", username);
     localStorage.setItem("password", password);
     alert("Account created! Please log in.");
