--- a/index.html
+++ b/index.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>StartPilot - Sign Up & Login</title>
+  <title>StartPilot - Home</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
       margin: 0;
-      padding: 0;
+      background: #f0f2f5;
     }
 
     header {
-      background: #4CAF50;
+      background: #4267B2;
       color: white;
-      padding: 15px 30px;
+      padding: 12px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
       font-size: 22px;
-      font-weight: bold;
+    }
+
+    header .profile {
+      cursor: pointer;
+      font-size: 14px;
     }
 
     .wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: calc(100vh - 60px);
+      display: grid;
+      grid-template-columns: 200px 1fr 200px;
+      gap: 20px;
       padding: 20px;
     }
 
-    .container {
+    .sidebar, .friends {
       background: white;
-      padding: 30px 40px 30px 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.15);
-      width: 350px;
+      border-radius: 10px;
+      padding: 15px;
+      height: fit-content;
     }
 
-    h2 { text-align: center; margin-bottom: 15px; }
+    .main {
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+    }
+
+    h2 {
+      margin-top: 0;
+    }
 
     input, textarea {
       width: 100%;
@@ -45,236 +61,188 @@
     }
 
     button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      background: #4CAF50;
+      padding: 8px 15px;
+      background: #4267B2;
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 16px;
     }
 
-    button:hover { background: #45a049; }
+    button:hover { background: #365899; }
 
-    .switch {
-      text-align: center;
-      margin-top: 12px;
-      color: #007bff;
+    .post {
+      border: 1px solid #ddd;
+      padding: 10px;
+      margin: 12px 0;
+      border-radius: 6px;
+      background: #fafafa;
+    }
+
+    .tabs {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
+
+    .tab {
+      padding: 8px 12px;
+      background: #eee;
+      border-radius: 6px;
       cursor: pointer;
     }
 
-    /* Home feed */
-    #posts { margin-top: 15px; }
-    .post {
-      background: #fafafa;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 10px;
-      margin: 8px 0;
+    .tab.active {
+      background: #4267B2;
+      color: white;
     }
 
-    .profile-pic {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-bottom: 10px;
+    video, img {
+      max-width: 100%;
+      border-radius: 8px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<header>StartPilot</header>
+<header>
+  <h1>StartPilot</h1>
+  <div class="profile" onclick="showProfile()">
+    My Profile
+  </div>
+</header>
 
 <div class="wrapper">
-
-  <!-- Sign Up -->
-  <div class="container" id="signup">
-    <h2>Sign Up</h2>
-    <input type="text" id="newUser" placeholder="Username">
-    <input type="password" id="newPass" placeholder="Password">
-    <button onclick="signup()">Sign Up</button>
-    <div class="switch" onclick="showLogin()">Already have an account? Login</div>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h3>Menu</h3>
+    <div onclick="showSection('feed')" class="tab active">Feed</div>
+    <div onclick="showSection('pictures')" class="tab">Pictures</div>
+    <div onclick="showSection('videos')" class="tab">Videos</div>
   </div>
 
-  <!-- Login -->
-  <div class="container" id="login" style="display:none;">
-    <h2>Login</h2>
-    <input type="text" id="user" placeholder="Username">
-    <input type="password" id="pass" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <div class="switch" onclick="showSignup()">Don’t have an account? Sign Up</div>
+  <!-- Main Feed -->
+  <div class="main">
+    <h2 id="sectionTitle">Feed</h2>
+
+    <textarea id="postText" placeholder="What's on your mind?"></textarea>
+    <input type="file" id="postFile" accept="image/*,video/*">
+    <button onclick="createPost()">Post</button>
+
+    <div id="postsArea"></div>
   </div>
 
-  <!-- Age Check -->
-  <div class="container" id="ageCheck" style="display:none;">
-    <h2>Age Verification</h2>
-    <label>
-      <input type="checkbox" id="ageBox"> I am 13 years or older
-    </label>
-    <button onclick="verifyAge()">Continue</button>
+  <!-- Friends -->
+  <div class="friends">
+    <h3>Friends</h3>
+    <input type="text" id="friendName" placeholder="Add friend by name">
+    <button onclick="addFriend()">Add Friend</button>
+    <ul id="friendList"></ul>
   </div>
-
-  <!-- Profile Setup -->
-  <div class="container" id="profileSetup" style="display:none;">
-    <h2>Build Profile</h2>
-    <input type="text" id="profileName" placeholder="Profile Name">
-    <input type="text" id="realName" placeholder="First Name">
-    <input type="text" id="lastName" placeholder="Last Name">
-    <input type="date" id="birthday">
-    <label>Upload Profile Picture (optional):</label>
-    <input type="file" id="profilePic" accept="image/*">
-    <button onclick="finishProfile()">Done</button>
-  </div>
-
-  <!-- Home Page -->
-  <div class="container" id="homePage" style="display:none; width:500px;">
-    <h2 id="welcomeMsg">Welcome!</h2>
-    <img id="profileImage" class="profile-pic" style="display:none;">
-    <textarea id="newPost" placeholder="What's on your mind?" style="width:100%; height:60px; margin-top:10px;"></textarea>
-    <button onclick="addPost()">Post</button>
-    <div id="posts"></div>
-  </div>
-
 </div>
 
 <script>
-function signup() {
-  let username = document.getElementById("newUser").value;
-  let password = document.getElementById("newPass").value;
+let currentSection = "feed";
 
-  if (username && password) {
-    localStorage.setItem("username", username);
-    localStorage.setItem("password", password);
-    alert("Account created! Please log in.");
-    showLogin();
-  } else {
-    alert("Please fill out all fields.");
-  }
-}
+function createPost() {
+  let text = document.getElementById("postText").value;
+  let fileInput = document.getElementById("postFile");
+  let posts = JSON.parse(localStorage.getItem("posts")) || [];
+  let user = JSON.parse(localStorage.getItem("userProfile")) || { profileName: "User" };
 
-function login() {
-  let username = document.getElementById("user").value;
-  let password = document.getElementById("pass").value;
+  let newPost = { author: user.profileName, text: text, type: "text" };
 
-  let storedUser = localStorage.getItem("username");
-  let storedPass = localStorage.getItem("password");
-
-  if (username === storedUser && password === storedPass) {
-    localStorage.setItem("loggedInUser", username);
-    document.getElementById("login").style.display = "none";
-    document.getElementById("ageCheck").style.display = "block";
-  } else {
-    alert("Incorrect username or password.");
-  }
-}
-
-function verifyAge() {
-  let checkbox = document.getElementById("ageBox");
-  if (checkbox.checked) {
-    document.getElementById("ageCheck").style.display = "none";
-    document.getElementById("profileSetup").style.display = "block";
-  } else {
-    alert("You must be 13 years or older to continue.");
-  }
-}
-
-function finishProfile() {
-  let profilePicInput = document.getElementById("profilePic");
-  let file = profilePicInput.files[0];
-
-  if (file) {
+  if (fileInput.files.length > 0) {
+    let file = fileInput.files[0];
     let reader = new FileReader();
     reader.onload = function(e) {
-      saveProfile(e.target.result);
+      if (file.type.startsWith("image/")) {
+        newPost.type = "image";
+        newPost.src = e.target.result;
+      } else if (file.type.startsWith("video/")) {
+        newPost.type = "video";
+        newPost.src = e.target.result;
+      }
+      posts.push(newPost);
+      localStorage.setItem("posts", JSON.stringify(posts));
+      document.getElementById("postText").value = "";
+      fileInput.value = "";
+      loadPosts();
     };
     reader.readAsDataURL(file);
   } else {
-    saveProfile("");
+    posts.push(newPost);
+    localStorage.setItem("posts", JSON.stringify(posts));
+    document.getElementById("postText").value = "";
+    loadPosts();
   }
-}
-
-function saveProfile(picData) {
-  let profile = {
-    profileName: document.getElementById("profileName").value,
-    realName: document.getElementById("realName").value,
-    lastName: document.getElementById("lastName").value,
-    birthday: document.getElementById("birthday").value,
-    profilePic: picData
-  };
-
-  localStorage.setItem("userProfile", JSON.stringify(profile));
-
-  document.getElementById("profileSetup").style.display = "none";
-  document.getElementById("homePage").style.display = "block";
-
-  let welcome = "Welcome, " + profile.profileName + "! 🎉";
-  document.getElementById("welcomeMsg").innerText = welcome;
-
-  if (profile.profilePic) {
-    let img = document.getElementById("profileImage");
-    img.src = profile.profilePic;
-    img.style.display = "block";
-  }
-
-  loadPosts();
-}
-
-function addPost() {
-  let text = document.getElementById("newPost").value.trim();
-  if (text === "") return;
-
-  let posts = JSON.parse(localStorage.getItem("posts")) || [];
-  let user = JSON.parse(localStorage.getItem("userProfile"));
-
-  let newPost = {
-    author: user.profileName,
-    text: text,
-    pic: user.profilePic
-  };
-
-  posts.unshift(newPost);
-  localStorage.setItem("posts", JSON.stringify(posts));
-
-  document.getElementById("newPost").value = "";
-  loadPosts();
 }
 
 function loadPosts() {
   let posts = JSON.parse(localStorage.getItem("posts")) || [];
-  let postsDiv = document.getElementById("posts");
-  postsDiv.innerHTML = "";
+  let postsArea = document.getElementById("postsArea");
+  postsArea.innerHTML = "";
 
-  if (posts.length === 0) {
-    postsDiv.innerHTML = "<p>No posts yet. Be the first!</p>";
-  } else {
-    posts.forEach(post => {
-      let div = document.createElement("div");
-      div.className = "post";
-      let imgTag = post.pic ? `<img src="${post.pic}" class="profile-pic">` : "";
-      div.innerHTML = imgTag + "<strong>" + post.author + ":</strong><br>" + post.text;
-      postsDiv.appendChild(div);
-    });
-  }
+  let filtered = posts.filter(p => {
+    if (currentSection === "feed") return true;
+    if (currentSection === "pictures") return p.type === "image";
+    if (currentSection === "videos") return p.type === "video";
+  });
+
+  filtered.reverse().forEach(p => {
+    let div = document.createElement("div");
+    div.className = "post";
+    div.innerHTML = "<strong>" + p.author + ":</strong> " + (p.text || "");
+    if (p.type === "image") {
+      div.innerHTML += "<br><img src='" + p.src + "'>";
+    }
+    if (p.type === "video") {
+      div.innerHTML += "<br><video controls src='" + p.src + "'></video>";
+    }
+    postsArea.appendChild(div);
+  });
 }
 
-function showLogin() {
-  document.getElementById("signup").style.display = "none";
-  document.getElementById("login").style.display = "block";
-  document.getElementById("ageCheck").style.display = "none";
-  document.getElementById("profileSetup").style.display = "none";
-  document.getElementById("homePage").style.display = "none";
+function showSection(section) {
+  currentSection = section;
+  document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
+  let tabs = document.querySelectorAll(".sidebar .tab");
+  if (section === "feed") tabs[0].classList.add("active");
+  if (section === "pictures") tabs[1].classList.add("active");
+  if (section === "videos") tabs[2].classList.add("active");
+  document.getElementById("sectionTitle").innerText = section.charAt(0).toUpperCase() + section.slice(1);
+  loadPosts();
 }
 
-function showSignup() {
-  document.getElementById("login").style.display = "none";
-  document.getElementById("signup").style.display = "block";
-  document.getElementById("ageCheck").style.display = "none";
-  document.getElementById("profileSetup").style.display = "none";
-  document.getElementById("homePage").style.display = "none";
+function addFriend() {
+  let name = document.getElementById("friendName").value;
+  if (!name) return;
+  let friends = JSON.parse(localStorage.getItem("friends")) || [];
+  friends.push(name);
+  localStorage.setItem("friends", JSON.stringify(friends));
+  document.getElementById("friendName").value = "";
+  loadFriends();
 }
+
+function loadFriends() {
+  let friends = JSON.parse(localStorage.getItem("friends")) || [];
+  let list = document.getElementById("friendList");
+  list.innerHTML = "";
+  friends.forEach(f => {
+    let li = document.createElement("li");
+    li.textContent = f;
+    list.appendChild(li);
+  });
+}
+
+function showProfile() {
+  alert("Profile page coming soon!");
+}
+
+// Initial load
+loadPosts();
+loadFriends();
 </script>
 
 </body>
